  "conflict/fixandcontinue", and "conflict/maxcoefquot" to control generalized resolution conflict analysis.
- new parameter "lp/minsolvedepth" to give a lower bound on the depth at which LPs are solved
- new parameters "reading/nlreader/binary" and "reading/nlreader/comments" to adjust writing of nl files
- new parameter "nlpi/conopt/priority" to set the priority of the CONOPT NLP solver

### Data structures

- added structs SCIP_IISFINDER, SCIP_IISFINDERDATA, SCIP_IIS
- added struct SCIP_DATATREE to model generic serializable data; new enum SCIP_DATATREE_VALUETYPE

Deleted files
-------------

- removed lpi_spx1.cpp
- removed cons_abspower.{h,c}, cons_quadratic.{h,c}, and cons_soc.{h,c}

Testing
-------

Build system
------------

- changed the default for TPI to tny
- added build flag CHECKSTAGE=auto to control stage checks in API function calls
- removed LPS options spx1 and spx2, only LPS=spx is available to select SoPlex now
- removed previously deprecated PARASCIP option, use instead THREADSAFE=false to disable thread-safety

### Makefile

- revised SANITIZE options: removed SANITIZE=full, added SANITIZE=thread, SANITIZE=address, and SANITIZE=memory to enable
  thread, address, and memory sanitizers, respectively, in addition to undefined behavior sanitizer;
  changed default to SANITIZE=false
- added build flag MPFR (default: false) to link with the multiprecision floating-point library, needed when SoPlex is also
  built with MPFR=true for precision boosting in rational solving mode
- the symlink $(LIBDIR)/include/papilo should now point to the `src` subdirectory of a PaPILO repository or the headers directory
  of a PaPILO installation without TBB; pointing to the directory of a PaPILO repository still works, but is deprecated
- removed option to link TBB library, as this is not used by default when PaPILO has not been built via cmake
  (use USRCXXFLAGS=-DPAPILO_TBB USRLDFLAGS=-ltbb to enable TBB for PaPILO)