@@ -274,6 +274,8 @@ Interface changes
 - new parameter "lp/minsolvedepth" to give a lower bound on the depth at which LPs are solved
 - new parameters "reading/nlreader/binary" and "reading/nlreader/comments" to adjust writing of nl files
 - new parameter "nlpi/conopt/priority" to set the priority of the CONOPT NLP solver
+- new parameter "randomization/randomseedshiftmultiplier" to set a multiplier for the shift set by "randomization/randomseedshift";
+  the default value for the randomseedshiftmultiplier is expected to be changed with every major release
 
 ### Data structures
 
